Bug 1218224 - Reader View bottom margin too big for <li> elements, r= Gijs.
MozReview-Commit-ID: ChT6WNMacOp

UltraBlame original commit: 315763ca22c190dde2ef96f4f42e49fe63246106

--- a/toolkit/themes/shared/aboutReaderContent.css
+++ b/toolkit/themes/shared/aboutReaderContent.css
@@ -448,6 +448,30 @@ radius
 5px
 ;
 }
+li
+{
+margin
+-
+bottom
+:
+0
+;
+}
+li
+>
+ul
+li
+>
+ol
+{
+margin
+-
+bottom
+:
+-
+10px
+;
+}
 p
 >
 img
